@@ -1,3 +1,8 @@
+2014-09-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* w2c/config.h: Bug fix: integer64 must always a be 64bit type,
+	even when long and off_t are not (detected by Norbert Preinig).
+
 2014-09-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am: Include fragments libmputil.am and pmpost.am.
